--- a/css/style.css
+++ b/css/style.css
@@ -9,45 +9,80 @@ body {
     text-decoration: none;
 }
 
-/* Header */
+/* Header menu */
 header {
     position: absolute;
+    width: 100%;
+    z-index: 1;
+}
+.logo {
+    width: 12rem;
+    float: left;
+    margin-top: 20px;
+    margin-left: 3rem;
+}
+.logo-black {
+    display: none;
+    float: left;
+    width: 10rem;
+    margin: 5px 0;
+    margin-left: 3rem;
+}
+/* Main nav */
+.main-nav {
+    float: right;
+    list-style: none;
+    margin-top: 20px;
+    margin-right: 3rem;
+}
+
+.main-nav li {
+    display: inline-block;
+    margin-left: 40px;
+}
+ .main-nav li a:link,
+ .main-nav li a:visited {
+     padding: 8px 0;
+     color: #fff;
+     text-decoration: none;
+     text-transform: uppercase;
+     font-size: 85%;
+     border-bottom: 2px solid transparent;
+     transition: border-bottom 0.2s;
+ }
+
+ .main-nav li a:hover,
+ .main-nav li a:active {
+     border-bottom: 2px solid rgba(130, 186, 177, 1);
+ }
+
+/* Sticky nav */
+.sticky {
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
-    height: 6rem;
-    z-index: 1;
-  }
-  
-  header nav {
-    display: inline-block;
-    float: right;
-    padding-right: 3rem;
-  }
-  
-  header nav ul li {
-    display: inline-block;
-    vertical-align: top;
-    text-transform: uppercase;
-  }
+    background-color: rgba(130, 186, 177, 1);
+    box-shadow: 0 2px 2px #efefef;
+}
 
-  header nav ul li a {
-    display: block;
-    color: #fff;
-    font-size: 0.8rem;
-    padding: 2rem 0 0 1.5rem;
-    text-decoration: none;
-    font-weight: 500;
-  }
-  
-  header nav ul li a:hover {
-    background-color: rgba(255, 255, 255, 0.18);
-  }
+.sticky .main-nav li a:link,
+.sticky .main-nav li a:visited {
+    padding: 10px 0;
+    color: #555;
+}
 
-  .w-logo {
-      width: 12rem;
-      padding: 2rem 0 0 2rem;
-  }
+.sticky .main-nav {
+    margin-top: 10px;   
+}
+
+.sticky .main-nav li a:hover,
+.sticky .main-nav li a:active {
+    border-bottom: 2px solid rgb(0, 0, 0);
+}
+.sticky .logo { display: none;}
+.sticky .logo-black { display: block;}
+
 
 /* Slides btn */
 .button-slides{
@@ -234,6 +269,7 @@ input[type=submit]:active {
     width: 100%;
 }
 
+/* Section 2 */
 .section-2 {
     padding: 1rem 8rem;
 }
@@ -278,6 +314,7 @@ input[type=submit]:active {
     padding-bottom: 3rem;
 }
 
+/* Section 3 */
 .section-3 {
   
     background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../img/training.jpg);
@@ -304,19 +341,16 @@ input[type=submit]:active {
   
   }
 
-  /* -------------------------------*/
+  
 /*FOOTER*/
-/* -------------------------------*/
-
 footer {
     background-color: #333;
     font-size: 80%;
-    padding: 3rem;
+    padding: 3rem 8rem;
 }
 
 .footer-1 {
   text-align: left;
-  
   color: rgb(124, 117, 117);
   
 }
@@ -389,4 +423,6 @@ footer p {
 	text-align: center;
 	margin-top: -60px;
 }
-
+.copyright {
+    margin-top: .9rem;
+}
