--- a/css/queries.css
+++ b/css/queries.css
@@ -142,8 +142,9 @@
     }
    
     .logo-black {
-        width: 8rem;
+        width: 30%;
         margin-top: 1rem;
+        margin-left: 1rem;
     }
 
     /* Mobile navi */
@@ -154,13 +155,13 @@
     }
 
     .mobile-nav-icon {
-        margin-top: 5px;
-        margin-right: 10px;
+        margin-top: .4rem;
+        margin-right: 1rem;
     }
     .main-nav {
         float: left;
         margin-top: 15px;
-        margin-left: 25px;
+        margin-left: 5px;
         
     }
     .main-nav li {
@@ -173,6 +174,7 @@
         border: 0;
         padding: 4px 0;
         font-size: 60%;
+        margin-left: -25px;
     }
 
 
