--- a/css/queries.css
+++ b/css/queries.css
@@ -280,7 +280,7 @@
     .social-links {
         margin-right: 1%;
         margin-top: -160px;
-        padding: 2rem 1rem;
+        padding: 2rem 0;
     }
 
     .btn:link,
