--- a/css/style.css
+++ b/css/style.css
@@ -345,6 +345,7 @@ input[type=submit]:active {
     height: 100%;
     object-fit: cover;
     border-radius: 3%;
+    border: solid 3px #ebe9e9;
   }
 
   /*---------------------------------*/
