--- a/css/queries.css
+++ b/css/queries.css
@@ -198,10 +198,10 @@
         padding: 6px 8px;
         font-size: 60%;
         margin-left: -25px;
-        background-color: rgb(179, 179, 179);
+        background-color: rgb(255, 255, 255);
         width: 80px;
         opacity: 0.7;
-        
+        color: #000;
     }
 
     .sticky .main-nav { margin-top: 5px;}
