--- a/css/queries.css
+++ b/css/queries.css
@@ -24,6 +24,7 @@
 /* Small phones to small tablets: from 481px to 767px */
 @media only screen and (max-width: 767px) {
 
+    .email-side {display: none;}
     .main-banner .imgban-box h2 {
         font-size: 2rem;
     }
@@ -139,6 +140,8 @@
         margin-top: 1rem;
         margin-left: 1rem;
     }
+
+    .email-side {display: none;}
 
     /* Mobile navi */
     .main-nav { display: none;}
