--- a/css/queries.css
+++ b/css/queries.css
@@ -219,14 +219,14 @@
     }
     
     .section-1 {
-        padding: 5rem 1rem;
+        padding: 2rem 1rem;
     }
     .h-section-1 {
         font-size: 1.5rem;
         font-weight: 300;
     }
     .section-2 {
-        padding: 1rem 1rem;
+        padding: 0 1rem;
     }
 
     .h-text-section-2 {
