--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body {
 }
 
 /*---------------------------------*/
-/* Header menu */
+/* HEADER MENU */
 /*---------------------------------*/
 header {
     position: absolute;
@@ -31,7 +31,7 @@ header {
     margin-left: 3rem;
 }
 /*---------------------------------*/
-/* Main nav */
+/* MAIN NAV */
 /*---------------------------------*/
 .main-nav {
     float: right;
@@ -61,7 +61,7 @@ header {
  }
 
  /*---------------------------------*/
- /* Mobile navi */
+ /* MOBILE NAV */
  /*---------------------------------*/
  .mobile-nav-icon {
      float: right;
@@ -77,7 +77,7 @@ header {
  }
 
 /*---------------------------------*/
-/* Sticky nav */
+/* STICKY NAV */
 /*---------------------------------*/
 .sticky {
     position: fixed;
@@ -107,7 +107,7 @@ header {
 .sticky .logo-black { display: block;}
 
 /*---------------------------------*/
-/* Slides btn */
+/* SLIDES BTN */
 /*---------------------------------*/
 .button-slides{
 	position: absolute;
@@ -171,7 +171,7 @@ input[type=submit]:active {
 
 .email-side {
     position: absolute;
-    top: 50%;
+    top: 60%;
     left: -2%;
     color: #fff;
     font-size: 80%;
@@ -183,8 +183,30 @@ input[type=submit]:active {
 .email-side:hover {
     color: rgb(192, 192, 192);
 }
+
+.social-header {
+    position: relative;
+    top: 60%;
+    right: 5%;
+    float: right;
+    font-size: 100%;
+    z-index: 1;
+}
+
+.social-links-1 li  {
+    font-size: 200%;
+    list-style: none;
+}
+
+.social-links-1 li a:link,
+.social-links-1 li a:visited {
+	color: rgb(252, 249, 249);
+	transition: color 0.2s;
+}
+
+.social-links-1 .ion-social-youtube { font-size: 75%;}
 /*---------------------------------*/
-/* Image slide */
+/* IMAGE SLIDE */
 /*---------------------------------*/
 .main-banner {
     margin: 0 auto;
@@ -218,7 +240,7 @@ input[type=submit]:active {
     background-repeat: no-repeat;
 }
 
-/* Video banner */
+/* VIDEO BANNER */
 .main-banner #imgban1 {
     background-size: cover;
     background-position: center;
@@ -235,7 +257,7 @@ input[type=submit]:active {
     position: absolute;
 }
 
-/* Next and Prev btn */
+/* NEXT AND PREV BTN */
 .imgbanbtn {
     width: 2rem;
     height: 2rem;
@@ -268,7 +290,7 @@ input[type=submit]:active {
     background-repeat: no-repeat;
 }
 
-/* Slides texts */
+/* SLIDES TEXTS */
 .main-banner .imgban-box h2 {
     font-size: 2rem;
     font-weight: 300;
@@ -304,7 +326,7 @@ input[type=submit]:active {
 }
 
 /*---------------------------------*/
-/* Section 1 */
+/* SECTION 1 */
 /*---------------------------------*/
 .section-1 {
     padding: 5rem 8rem;
@@ -325,7 +347,7 @@ input[type=submit]:active {
     padding-bottom: 5rem;
 }
 
-/* Mobile image */
+/* MOBILE IMAGE */
 .flex-container {
     display: flex;
     align-items: stretch;
@@ -349,7 +371,7 @@ input[type=submit]:active {
     left: 0;
 }
 
-/* Video section 1 */
+/* VIDEO SECTION 1 */
 .flex-container .video-section-1 {
     width: 50%;
     margin-left: 20px;
@@ -374,7 +396,7 @@ input[type=submit]:active {
 
 
 /*---------------------------------*/
-/* Section 2 */
+/* SECTION 2 */
 /*---------------------------------*/
 .section-2 {
     padding: 0 8rem;
@@ -427,7 +449,7 @@ input[type=submit]:active {
 
 
 /*---------------------------------*/
-/* Section 3 */
+/* SECTION 3 */
 /*---------------------------------*/
 
 .section-3 {
@@ -471,7 +493,7 @@ footer {
     background-color: rgb(158, 155, 155);
     font-size: 80%;
     padding: 6rem 8rem ;
-    position: relative;
+    position: relative; 
 }
 
 .footer-logo img {
@@ -492,7 +514,7 @@ footer {
     font-size: .5rem;
 }
 
-/* Social icons */
+/* SOCIAL ICONS  */
 .social-links {
 	list-style: none;
     float: right;
@@ -558,7 +580,8 @@ footer {
 	color: #dd4b39;
 }
 .ion-social-instagram:hover {
-	color: #517fa4;
+    color: #c32aa3;
+    
 }
 
 .ion-social-linkedin:hover {
@@ -570,15 +593,8 @@ footer {
 }
 
 /*---------------------------------*/
-/* Finished 
+/*SCROLL UP BUTTON*/
 /*---------------------------------*/
-/*---------------------------------*/
-/* Codes by Rooheed Gulistani 
-/* rooheed.gulistani@gmail.com
-/*---------------------------------*/
-
-
-
 .return-to-top {
     position: fixed;
     bottom: 20px;
@@ -610,4 +626,16 @@ footer {
     color: #fff;
     top: 5px;
 }
+
+
+/*---------------------------------*/
+/* Finished 
+/*---------------------------------*/
+/*---------------------------------*/
+/* Code by Rooheed Gulistani 
+/* rooheed.gulistani@gmail.com
+/*---------------------------------*/
+
+
+
 
